--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT = 3001
 JWT_SECRET = 'alhamdulillahherabbilalaminarrahmanerrahimmalikiyeumiddin'
-MONGO_URI=mongodb://localhost:27017/userDB
+MONGO_URI=mongodb+srv://faiza:faiza@faizacluster.ftje3.mongodb.net/userDB?retryWrites=true&w=majority&appName=FaizaCluster
+
+# MONGO_URI=mongodb://localhost:27017/userDB
