--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,8 @@
 PORT = 3001
 JWT_SECRET = 'alhamdulillahherabbilalaminarrahmanerrahimmalikiyeumiddin'
-# MONGO_URI=mongodb+srv://faiza:faiza@faizacluster.ftje3.mongodb.net/userDB?retryWrites=true&w=majority&appName=FaizaCluster
+MONGO_URI=mongodb+srv://faiza:faiza@faizacluster.ftje3.mongodb.net/userDB?retryWrites=true&w=majority&appName=FaizaCluster
 
-MONGO_URI=mongodb://localhost:27017/userDB
+# MONGO_URI=mongodb://localhost:27017/userDB
+
+MEGA_EMAIL=mahfujalamrony07@gmail.com
+MEGA_PASSWORD= MS4i=s+@U\'5W%a}
