--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "megajs": "^1.3.5",
     "mongoose": "^8.10.1",
     "mongosh": "^2.4.0",
     "multer": "^1.4.5-lts.1",
