--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,4 +1,16 @@
+# Node.js modules
 node_modules/
 server/node_modules/
+
+
+.env
 *.key
 id_rsa
+
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+dist/
+build/
