--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "megajs": "^1.3.5",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1"
   },
